[package]
name = "valk"
version = "0.1.0"
edition = "2021"

[features]
default = []
skiplist = []

[dependencies]
bincode = "1.3.3"
error-stack = "0.4.1"
fastrand = "2.0.1"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive", "alloc", "std"] }
siphasher = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
